--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,12 +1,11 @@
 ---
 layout: default
 modal-id: 1
-date: 2014-07-18
-img: cabin.png
+date: 2015-04-01
+img: jacobs.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+position: Commander
+major: Political Science
+description: Tom "Toaster" Jacobs is a skilled project manager and team leader with experience garnered through 7 years as a CAP cadet, earning the Eaker Award in the process. Last summer he spearheaded a 120 person operation and managed over $1M in assets while providing security and search and rescue forces for the Greater Rochester International Airshow. Tom also serves as the National Director of Operations directly following candidate class, during which he pioneered new serve opportunities with CAP, AFJROTC, and the AFA while ushering in an electronic hours reporting system via Digital Cheetah.
 
 ---
