--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 1
 date: 2015-04-01
-img: jacobs.png
+img: jacobs.jpg
 alt: image-alt
 position: Commander
 major: Political Science
