--- a/_posts/2015-04-04-pa.markdown
+++ b/_posts/2015-04-04-pa.markdown
@@ -8,8 +8,11 @@ alt: image-alt
 position: Director of Public Affairs
 major: Electrical Engineering
 description: Bryan "Asian Muscle" Mah brings a diverse set of experiences as the National Director of Financial Management, as well as the Squadron Information Management Officer and Candidate Training Staff member, giving him experience in most areas of the society. His depth of knowledge makes him the perfect person to publicize our many service events and the causes we advocate. He will work to communicate internally and externally, string to gain recognition for our hardworking Arnies by our fellow members and our Air Force Family partners. The blue and gold we wear will become synonymous with meaningful service under Bryan's leadership.
-goal1: (1) Promote Arnold Air Society and Silver Wings through brand recognition.
-goal2: (2) Develop a NATCON marketing plan with Area PAs.
-goal3: (3) Improve Public Affairs teamwork and cross flow between Arnold Air Society and Silver Wings.
+goal1title: Promote AAS/SW Brand Recognition
+goal1: The colors of blue and gold should be synonymous with the professional, honorary service organization that we are proud to be. Our brand can be extended through standardized post themes, Arnold Air Letter designs and uses of imagery, allowing the reader to seamlessly connect our society to activities we promote. We are no average college extracurricular; our proud 67 year tradition of excellence and close ties to the Air Force Family set us apart from other student experiences. Throughout the military community we should be viewed as an honor society of professional officer candidates, striving to make their mark across 120+ campuses.
+goal2title: Develop NATCON Marketing Plan with Area PAs
+goal2: The promotion of the National Conclave is a responsibility of every member of the public affairs team. Through close work with the NATCON Staff, Bryan will pursue a unique regional approach to NATCON marketing, stressing that there is something for every member of our society. When the National Staff goes on the road to each ARCON promoting NATCON on behalf of the NATCON staff, their message will be narrowly tailored to the interests of each Area.
+goal3title: Improve PA Cross Flow between AAS/SW
+goal3: Arnold Air Society and Silver Wings should march in time together in their use of social media and public affairs efforts. By coordinating the promotion of service initiatives, common deadlines and successful joint projects through an open dialogue with the Silver Wings public affairs  team, we can benefit from the skills and experience of our combined media enterprise.
 
 ---
